fixing spacing

--- a/assignments/lesson-8/css/tablebuild.css
+++ b/assignments/lesson-8/css/tablebuild.css
@@ -1,7 +1,7 @@
 table {
     font-family: "Ubuntu", sans-serif;
     table-layout: auto;
-    width: 70%;
+    width: 100%;
     background: #628ca6
 }
 
@@ -22,11 +22,11 @@ th {
     color: white;
 }
 
-td:nth-child(1, 3, 5, 7) {
+td:nth-child(verticle-odd) {
     background: #e7f0ed;
 }
 
-td:nth-of-type(2, 4, 6, 8) {
+td:nth-of-type(verticle-even) {
     background: #e7ffed;
 }
 
